# dnd_rule_assistant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
configs/: ingest.yaml  prompts.yaml
data/eval/: dataset.jsonl
docs/: quality_notes.md
notebooks/: 01_parse_docs.ipynb  02_chunk_and_sample.ipynb  02_md_processing.ipynb  03_index_and_embedding.ipynb
scripts/: check_env.py  run_eval.py
src/dnd_rag/core/: chunking.py  config.py  diagnostics.py  io.py  llm_cleanup.py  pipelines.py  prompts.py  reranker.py  retriever.py  section_parser.py
src/dnd_rag/interfaces/: bot.py  cli.py
src/dnd_rag/providers/: embeddings.py  llm.py  vectorstore.py
tests/: test_eval_smoke.py  test_retriever_and_pipeline.py
